fix(core/menu): fix overflow behavior

--- a/packages/core/src/components/menu/menu.scss
+++ b/packages/core/src/components/menu/menu.scss
@@ -25,7 +25,7 @@ $menu-expanded-width: 16rem;
   z-index: var(--theme-z-index-sticky);
   width: auto;
 
-  bottom: 0px;
+  bottom: 0;
 
   .tabs {
     height: 100%;
@@ -34,6 +34,15 @@ $menu-expanded-width: 16rem;
     pointer-events: all;
 
     -ms-overflow-style: none;
+
+    scrollbar-width: inherit;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+
+  .scrollbar {
     scrollbar-width: inherit;
 
     &::-webkit-scrollbar {
@@ -45,7 +54,7 @@ $menu-expanded-width: 16rem;
     overflow: hidden;
     display: block;
     position: relative;
-    margin-bottom: 2rem;
+    margin-bottom: .75rem;
   }
 
   .tabs--shadow {
@@ -175,7 +184,7 @@ $menu-expanded-width: 16rem;
   }
 
   .menu-overlay {
-    left: 0px;
+    left: 0;
     width: 100vw;
   }
 }
